--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             We're sorry, there has been an error submitting your message. You
             can email us direct at
             <a
-              mailto="rob@emiyaconsulting.com"
+              href="mailto:rob@emiyaconsulting.com"
               target="_blank"
               rel="noreferrer"
             >
@@ -69,7 +69,7 @@
           <form id="contact-form" action="">
             <p>
               <label for="name">Name</label>
-              <input type="text" name="name" id="name" />
+              <input type="text" name="name" id="name" required />
             </p>
             <p>
               <label for="company">Company</label>
@@ -77,7 +77,7 @@
             </p>
             <p>
               <label for="email">Email Address</label>
-              <input type="email" name="email" id="email" />
+              <input type="email" name="email" id="email" required />
             </p>
             <p>
               <label for="phone">Phone Number</label>
